try to fix intersection observer on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,6 @@ div {
     text-align: center;
 }
 
-.bigh1 {
-}
 .hero-content {
     max-width: 100%;
     margin: 0 auto;
